re PR target/19496 (ICE in gcc.c-torture/execute/ieee/fp-cmp-8.c for x86_64 and i686 with -msse2 -mfpmath=sse)

PR target/19496
        * config/i386/i386.c (ix86_expand_fp_movcc): Fail for LTGT and UNEQ.

From-SVN: r93826